Add ConfigFile.getSectionAsInterface() method.